--- a/Get more.html
+++ b/Get more.html
@@ -1,319 +1,341 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link href="http://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
-<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-<title>Men</title>
-<link rel="stylesheet" href="css/Get more.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link href="http://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+	<title>Men</title>
+	<link rel="stylesheet" href="css/Get more.css">
 </head>
 <body>
-<div class="header">
-	<div class="burger"><i class="fas fa-bars"></i></div>
-	<div class="logo">Fashion</div>
-	<nav>
-		<ul class="ul1" id="menu">
-			<li class="active-li"><a href="index.html" class="active-a">Home</a></li>
-			<li><a href="#">Product <i class="fas fa-caret-circle-down"></i></a>
-				<ul class="ul2">
 
-                    <li><a href="Get more.html">Men's</a></li>
-                    <li><a href="get more2.html">Girl's</a></li>
-                    <li><a href="#">Shoe's</a></li>
+	<!-------------- header start ---------------- -->
 
-                </ul>
-			</li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Help</a></li>
-		</ul>
-	</nav>
-	<div class="login"><a href="login.html" class="login-a">Login</a></div>
-	<div class="cart"> <div class="zero">
-      <span class="span-9"> 0 </span></div><a href="#" class="cart-logo"><i class='bx bx-cart'></i></a></div>
-</div>
 
-<br>
+	<div class="header">
+		<div class="burger"><i class="fas fa-bars"></i></div>
+		<div class="logo">Fashion</div>
+		<nav>
+			<ul class="ul1" id="menu">
+				<li class="active-li"><a href="index.html" class="active-a">Home</a></li>
+				<li><a href="#">Product <i class="fas fa-caret-circle-down"></i></a>
+					<ul class="ul2">
 
-<div class="name"><span class="span-1">Men's</span> Product</div>
-<div class="container comman">
-	<div class="bg1">
-		<img src="image/product-4.jpg" alt="">
+						<li><a href="Get more.html">Men's</a></li>
+						<li><a href="get more2.html">Girl's</a></li>
+						<li><a href="#">Shoe's</a></li>
 
-		<h5>T-Shirt</h5>
-
-		<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
+					</ul>
+				</li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Help</a></li>
+			</ul>
+		</nav>
+		<div class="login"><a href="login.html" class="login-a">Login</a></div>
+		<div class="cart"> <div class="zero">
+			<span class="span-9"> 0 </span></div><a href="#" class="cart-logo"><i class='bx bx-cart'></i></a></div>
 		</div>
-        </div>
 
-	</div>
+		<br>
+
+		<!-------------- header end ---------------- -->
 
 
-	<div class="bg1">
-		<img src="image/jaket2.jpg">
+		<!-------------- container 1 start ---------------- -->
 
-		<h5>T-Shirt</h5>
 
-			<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
+
+		<div class="name"><span class="span-1">Men's</span> Product</div>
+		<div class="container comman">
+			<div class="bg1">
+				<img src="image/product-4.jpg" alt="">
+
+				<h5>T-Shirt</h5>
+
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+
+			</div>
+
+
+			<div class="bg1">
+				<img src="image/jaket2.jpg">
+
+				<h5>T-Shirt</h5>
+
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="bg1">
+				<img src="image/product-3.jpg">
+
+				<h5>T-Shirt</h5>
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="bg1">
+				<img src="image/brand3.jfif" alt="">
+
+				<h5>T-Shirt</h5>
+
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 299</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+			</div>
 		</div>
-        </div>
-	</div>
+
+		<!-------------- container 1 end ---------------- -->
 
 
-	<div class="bg1">
-		<img src="image/product-3.jpg">
+		<!-------------- container 2 start ---------------- -->
 
-          <h5>T-Shirt</h5>
-			<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
+
+		<div class="container2 comman">
+
+			<div class="bg1">
+				<img src="image/boy.jpg">
+
+				<h5>T-Shirt</h5>
+
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+			</div>
+
+			<div class="bg1">
+				<img src="image/pic4.jpg" alt="">
+
+				<h5>T-Shirt</h5>
+
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+
+
+			</div>
+			<div class="bg1">
+				<img src="image/mens's1.jpg">
+
+				<h5>T-Shirt</h5>
+
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 299</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="bg1">
+				<img src="image/jaket's1.jpg" alt="">
+
+				<h5>T-Shirt</h5>
+
+				<div class="txt">
+					<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
+					<a href="cart.html" class="btn-a">Buy</a>
+					<div class="stars">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half-alt"></i>
+					</div>
+				</div>
+			</div>
 		</div>
-        </div>
-	</div>
+
+		<br>
+
+		<!-------------- container 2 end ---------------- -->
 
 
-	<div class="bg1">
-		<img src="image/brand3.jfif" alt="">
+		<!-------------- footer start ---------------- -->
 
-        <h5>T-Shirt</h5>
 
-	<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.299</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
-        </div>
-        </div>
-	</div>
-</div>
+		<div class="numbers">
 
-<div class="container2 comman">
+			<div class="circle negetive">-</div> 
 
-	<div class="bg1">
-	<img src="image/boy.jpg">
+			<div class="circle">
+				<span class="span-4">1</span>
+			</div>
+			<div class="circle">
+				<span class="span-4">2</span>
+			</div>
+			<div class="circle">
+				<span class="span-4">3</span>
+			</div>
+			<div class="circle">
+				<span class="span-4">4</span>
+			</div>
 
-	<h5>T-Shirt</h5>
 
-		<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
-        </div>
-        </div>
-	</div>
+			<div class="dot">
+				<span class="span-4">.</span>
+			</div>
 
-	<div class="bg1">
-		<img src="image/pic4.jpg" alt="">
+			<div class="dot">
+				<span class="span-4">.</span>
+			</div>
 
-		<h5>T-Shirt</h5>
-
-			<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
+			<div class="circle positive">
+				+
+			</div>
 		</div>
-        </div>
+
+		<br>
 
 
-	</div>
-	<div class="bg1">
-		<img src="image/mens's1.jpg">
+		<footer>
 
-		<h5>T-Shirt</h5>
 
-			<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.299</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
+			<h4><span class="span-7">Fashion</span></h4>
+			<div class="footer-txt">
+				<div class="links">
+					<h6><span class="span-8">Link</span>shortcut</h6>
+					<ul class="footer-ul-1">
+						<li class="footer-li all-li"><a href="index.html" id="footer-a">Home</a></li>
+						<li class="all-li"><a href="Product.html" id="footer-a">Product</a></li>
+						<ul class="footer-ul-2">
+
+							<li  class="all-li"><a href="Get more.html" id="footer-a">Men's"</a></li>
+							<li  class="all-li"><a href="get more2.html" id="footer-a">Girl's</a></li>
+							<li  class="all-li"><a href="#" id="footer-a">Shoe's</a></li>
+
+						</ul>
+					</li>
+					<li  class="all-li"><a href="#" id="footer-a">About</a></li>
+					<li  class="all-li"><a href="#" id="footer-a">Help</a></li>
+				</ul>
+			</div>
+
+			<div class="social links">
+				<h6><span class="span-8">Social</span>link's</h6>
+				<div class="face-book all-li">
+					<a href="#" id="footer-a">
+						<i class="fab fa-facebook-f"></i>
+					Facebook</a>
+				</div>
+				<div class="inta-gram all-li">
+					<a href="#" id="footer-a"><i class="fab fa-instagram"></i> Instagram</a>
+				</div>
+				<div class="twi-ter all-li">
+					<a href="#" id="footer-a"><i class="fab fa-twitter"></i> Twitter</a>
+				</div>
+			</div>
+
+			<div class="contact links fas-con">
+				<h6><span class="span-8 ">Cont</span>act</h6>
+				<div class="footer-addres color-txt all-li"><i class="fas fa-address-card"></i> Rattan Galaxy NaviMumbai(422040)</div>
+				<div class="footer-phone color-txt all-li"><i class="fas fa-phone"></i> 1454(25)88</div>
+				<div class="footer-email  color-txt all-li"><i class="fas fa-at"></i> asd@gmail.com</div>
+			</div>
+
+			<div class="facility fas-con">
+				<h6><span class="span-8">Faci</span>lity</h6>
+				<div class="facili color-txt">
+					<div class="i-cc">
+						<i class='bx bx-purchase-tag-alt'></i>
+					</div>
+				Low Price</div> 
+				<div class="facili color-txt">
+					<div class="i-cc">
+						<i class="fas fa-undo"></i>
+					</div>
+				7-DayReturn</div> 
+				<div class="facili color-txt">
+					<div class="i-cc">
+						<i class="fas fa-truck"></i>
+					</div>
+					FreeDelivery
+				</div> 
+				<div class="facili color-txt">
+					<div class="i-cc">
+						<i class='bx bx-bookmark-alt-minus'></i>
+					</div>
+					PrivacyPolicy
+				</div> 
+				<div class="facili color-txt">
+					<div class="i-cc">
+						<i class='bx bx-headphone'></i>
+					</div>
+				24/7Support</div> 
+				<div class="facili color-txt">
+					<div class="i-cc">
+						<i class='bx bx-gift'></i> 
+					</div>
+					Security
+				</div> 
+			</div>
+
+			<div class="map fas-con">
+				<h6><span class="span-8">Loca</span>tion</h6>
+				<div class="location">
+					<div class="i-cc">
+						<i class="fas fa-location"></i>
+					</div>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15079.452041717466!2d72.86097912347769!3d19.113664717895418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c83c05b7fc89%3A0xbe87eb057f3aafda!2sAndheri%2C%20Maharashtra%20400053!5e0!3m2!1sen!2sin!4v1640418276497!5m2!1sen!2sin" width="100" height="130" style="border:0;" allowfullscreen="" loading="lazy"></iframe>      	
+				</div>
+			</div>
 		</div>
-        </div>
-	</div>
+	</footer>
 
 
-	<div class="bg1">
-		<img src="image/jaket's1.jpg" alt="">
-
-		<h5>T-Shirt</h5>
-
-			<div class="txt">
-         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
-        <a href="cart.html" class="btn-a">Buy</a>
-        <div class="stars">
-         <i class="fas fa-star"></i>
-		<i class="fas fa-star"></i>
-		<i class="fas fa-star-half-alt"></i>
-		</div>
-        </div>
-	</div>
-</div>
-
-
-<br>
-
-
-<div class="numbers">
-
-		<div class="circle negetive">-</div> 
-
-	<div class="circle">
-	   <span class="span-4">1</span>
-	</div>
-	<div class="circle">
-		<span class="span-4">2</span>
-	</div>
-	<div class="circle">
-		<span class="span-4">3</span>
-	</div>
-	<div class="circle">
-		<span class="span-4">4</span>
-	</div>
-
-
-<div class="dot">
-		<span class="span-4">.</span>
-	</div>
-
-<div class="dot">
-		<span class="span-4">.</span>
-	</div>
-
-		<div class="circle positive">
-			+
-		</div>
-</div>
-
-<br>
-
-
-<footer>
-	
-
-	<h4><span class="span-7">Fashion</span></h4>
-	<div class="footer-txt">
-   <div class="links">
-     <h6><span class="span-8">Link</span>shortcut</h6>
-     <ul class="footer-ul-1">
-      <li class="footer-li all-li"><a href="index.html" id="footer-a">Home</a></li>
-      <li class="all-li"><a href="Product.html" id="footer-a">Product</a></li>
-      <ul class="footer-ul-2">
-
-        <li  class="all-li"><a href="Get more.html" id="footer-a">Men's"</a></li>
-        <li  class="all-li"><a href="get more2.html" id="footer-a">Girl's</a></li>
-        <li  class="all-li"><a href="#" id="footer-a">Shoe's</a></li>
-
-      </ul>
-    </li>
-    <li  class="all-li"><a href="#" id="footer-a">About</a></li>
-    <li  class="all-li"><a href="#" id="footer-a">Help</a></li>
-  </ul>
-</div>
-
-<div class="social links">
-  <h6><span class="span-8">Social</span>link's</h6>
-  <div class="face-book all-li">
-   <a href="#" id="footer-a">
-    <i class="fab fa-facebook-f"></i>
-  Facebook</a>
-</div>
-<div class="inta-gram all-li">
-  <a href="#" id="footer-a"><i class="fab fa-instagram"></i> Instagram</a>
-</div>
-<div class="twi-ter all-li">
-  <a href="#" id="footer-a"><i class="fab fa-twitter"></i> Twitter</a>
-</div>
-</div>
-
-<div class="contact links fas-con">
-  <h6><span class="span-8 ">Cont</span>act</h6>
-  <div class="footer-addres color-txt all-li"><i class="fas fa-address-card"></i> Rattan Galaxy NaviMumbai(422040)</div>
-  <div class="footer-phone color-txt all-li"><i class="fas fa-phone"></i> 1454(25)88</div>
-  <div class="footer-email  color-txt all-li"><i class="fas fa-at"></i> asd@gmail.com</div>
-</div>
-
-<div class="facility fas-con">
- <h6><span class="span-8">Faci</span>lity</h6>
- <div class="facili color-txt">
-  <div class="i-cc">
-   <i class='bx bx-purchase-tag-alt'></i>
- </div>
-Low Price</div> 
-<div class="facili color-txt">
-  <div class="i-cc">
-    <i class="fas fa-undo"></i>
-  </div>
-7-DayReturn</div> 
-<div class="facili color-txt">
- <div class="i-cc">
-   <i class="fas fa-truck"></i>
- </div>
- FreeDelivery
-</div> 
-<div class="facili color-txt">
- <div class="i-cc">
-   <i class='bx bx-bookmark-alt-minus'></i>
- </div>
- PrivacyPolicy
-</div> 
-<div class="facili color-txt">
- <div class="i-cc">
-   <i class='bx bx-headphone'></i>
- </div>
-24/7Support</div> 
-<div class="facili color-txt">
- <div class="i-cc">
-   <i class='bx bx-gift'></i> 
- </div>
- Security
-</div> 
-</div>
-
-<div class="map fas-con">
-  <h6><span class="span-8">Loca</span>tion</h6>
-  <div class="location">
-   <div class="i-cc">
-     <i class="fas fa-location"></i>
-   </div>
-   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15079.452041717466!2d72.86097912347769!3d19.113664717895418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c83c05b7fc89%3A0xbe87eb057f3aafda!2sAndheri%2C%20Maharashtra%20400053!5e0!3m2!1sen!2sin!4v1640418276497!5m2!1sen!2sin" width="100" height="130" style="border:0;" allowfullscreen="" loading="lazy"></iframe>      	
- </div>
-</div>
-</div>
-</footer>
- 
+	<!-------------- footer end ---------------- -->
 
 
 
 
-
- <!----------*Script*-------- -->
+	<!----------*Script*-------- -->
 
 
 
