--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 </head>
 <body>
 
-	<div class="header">
+
+  <!-------------- header start  ---------------- -->
+
+
+  <div class="header">
     <div class="burger"><i class="fas fa-bars"></i></div>
     <div class="logo">Fashion</div>
     <nav>
@@ -54,6 +58,12 @@
 
 </div>
 
+<!------------- header end  ---------------- -->
+
+
+<!-------------- main start  ---------------- -->
+
+
 <main>
   <div class="bgimg-1">
 
@@ -81,6 +91,13 @@
 </main>
 
 <br>
+
+<!-------------- main end  ---------------- -->
+
+
+
+<!-------------- conatiner 1 start  ---------------- -->
+
 
 <div class="container1">
  
@@ -115,8 +132,13 @@
 
 </div>
 
+<!-------------- conatiner 1 end  ---------------- -->
+
+
+<!-------------- conatiner 2 start  ---------------- -->
+
+
 <div class="colums">
-  <!-- 	<h1><span>Categ</span>ories</h1> -->
   <div class="container2">
     <h1><span class="span-1">Categ</span>ories</h1>
     <div class="bg2"><a href="Get more.html"><img src="image/mens's1.jpg"></a><h5>Men's</h5></div>
@@ -125,7 +147,6 @@
     <div class="bg2"><a href="#"><img src="image/watch4.jpg"></a><h5>Watche's</h5></div>
     <div class="bg2"><a href="#"><img src="image/shoe.jpg"></a><h5>Shoe's</h5></div>
     
-    <!-- <div class="bg2"><img src="camera.jpg"><h5>Cammera's</h5></div> -->
   </div>
 </div>
 
@@ -135,10 +156,14 @@
 	<div class="icon- icon-3"><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></div>
 </div>
 
-
-
 <div class="product"><h2><span class="span-2">Pro</span>duct's</h2></div>
 
+
+<!-------------- conatiner 2 end  ---------------- --> 
+
+
+
+<!-------------- conatiner 4 start  ---------------- -->
 
 
 <div class="container4">
@@ -366,6 +391,13 @@
 
 <br>
 
+<!-------------- conatiner 4 end  ---------------- -->
+
+
+<!-------------- conatiner 6 start  ---------------- -->
+
+
+
 <div class="brand"><h2><span class="span-2">Our</span>brand's</h2></div>
 
 <div class="container6">
@@ -388,6 +420,12 @@
   <div class="bg6"><a href="#"><img src="image/logo-philips.png"></a>
   </div>
 </div>
+
+
+<!-------------- conatiner 6 end  ---------------- -->
+
+
+<!-------------- footer start  ---------------- -->
 
 
 <footer>
@@ -485,10 +523,7 @@ Low Price</div>
 </footer>
 
 
-<!-- <i class='bx bx-gift'></i>
-<i class='bx bx-purchase-tag-alt'></i>
-<i class='bx bx-bookmark-alt-minus'></i>
-<i class='bx bx-headphone'></i> -->
+<!-------------- footer end ---------------- -->
 
 
 
