--- a/cart.html
+++ b/cart.html
@@ -99,7 +99,7 @@
 							</select>
 							<input type="number" value="1">
 							<br>
-							<span class="span-1"><i class="fas fa-rupee-sign"></i>.400</span>
+							<span class="span-1"><i class="fas fa-rupee-sign"></i> 400</span>
 							<a href="#" class="bttn">ADD TO CART</a>
 						</div>
 					</div>
@@ -121,7 +121,7 @@
 
 				<div class="bg5"><a href="#"><img src="image/camera.jpg"></a><h5>Shoe's</h5>
 					<div class="txt5">
-						<span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
+						<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
 						<a href="#" class="btn-a">Buy</a>
 						<div class="stars">
 							<i class="fas fa-star"></i>
@@ -134,7 +134,7 @@
 				</div>
 				<div class="bg5"><a href="#"><img src="image/watch.jpg"></a><h5>Shoe's</h5>
 					<div class="txt5">
-						<span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
+						<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
 						<a href="#" class="btn-a">Buy</a>
 						<div class="stars">
 							<i class="fas fa-star"></i>
@@ -147,7 +147,7 @@
 				</div>
 				<div class="bg5"><a href="#"><img src="image/headphone.jpg"></a><h5>Shoe's</h5>
 					<div class="txt5">
-						<span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
+						<span class="span-3"><i class="fas fa-rupee-sign"></i> 300</span>
 						<a href="#" class="btn-a">Buy</a>
 						<div class="stars">
 							<i class="fas fa-star"></i>
