--- a/get more2.html
+++ b/get more2.html
@@ -15,15 +15,16 @@
 
 	<!-------------- header start ---------------- -->
 
+	<!-- <i class="fas fa-bars"></i> -->
 
 	<div class="header">
-		<div class="burger"><i class="fas fa-bars"></i></div>
+		<div class="burger" id="menu-btn">  </div>
 		<div class="logo">Fashion</div>
-		<nav>
+		<nav id="navbar">
 			<ul class="ul1" id="menu">
 				<li class="active-li"><a href="index.html" class="active-a">Home</a></li>
-				<li><a href="#">Product <i class="fas fa-caret-circle-down"></i></a>
-					<ul class="ul2">
+				<li><a href="#" id="product">Product <i class="fas fa-caret-circle-down" id="iconrotate"></i></a>
+					<ul class="ul2" id="ul2">
 
 						<li><a href="Get more.html">Men's</a></li>
 						<li><a href="get more2.html">Girl's</a></li>
@@ -35,6 +36,11 @@
 				<li><a href="#">Help</a></li>
 			</ul>
 		</nav>
+
+ <a href="#">
+            <div class="heartbtn"> <i class="fas fa-2x fa-heart"></i> </div>
+        </a>
+		
 		<div class="login"><a href="login.html" class="login-a">Login</a></div>
 		<div class="cart"><div class="zero">
 			<span class="span-9"> 0 </span></div><a href="#" class="cart-logo"><i class='bx bx-cart'></i></a></div>
@@ -343,6 +349,10 @@
 	<!----------*Script*-------- -->
 
 
+	<script src="form.js">
+
+		
+	</script>
 
 
 </body>
