--- a/Product.html
+++ b/Product.html
@@ -16,13 +16,13 @@
 
 
 	<div class="header">
-		<div class="burger"><i class="fas fa-bars"></i></div>
+		<div class="burger" id="menu-btn"></div>
 		<div class="logo">Fashion</div>
-		<nav>
+		<nav id="navbar">
 			<ul class="ul1" id="menu">
 				<li class="active-li"><a href="index.html" class="active-a">Home</a></li>
-				<li><a href="#">Product <i class="fas fa-caret-circle-down"></i></a>
-					<ul class="ul2">
+				<li><a href="#" id="product">Product <i class="fas fa-caret-circle-down" id="iconrotate"></i></a>
+					<ul class="ul2" id="ul2">
 
 						<li><a href="Get more.html">Men's</a></li>
 						<li><a href="get more2.html">Girl's</a></li>
@@ -34,6 +34,11 @@
 				<li><a href="#">Help</a></li>
 			</ul>
 		</nav>
+
+ <a href="#">
+            <div class="heartbtn"> <i class="fas fa-2x fa-heart"></i> </div>
+        </a>
+		
 		<div class="login"><a href="login.html" class="login-a">Login</a></div>
 		<div class="cart">
 			<div class="zero">
@@ -727,7 +732,30 @@
 
 		<!----------*Script*-------- -->
 
+		<script>
 
+			product.addEventListener('click',function(){
+			  // e.preventDefault();
+			  if(iconrotate.style.transform=="rotate(0deg)" , ul2.style.display=="block"){
+			  document.getElementById('iconrotate').style.transform="rotate(178deg)";
+			 document.getElementById('ul2').style.display="none";
+			}
+			 else{
+			   document.getElementById('iconrotate').style.transform="rotate(0deg)";
+			 document.getElementById('ul2').style.display="block";
+			
+			}
+			 })
+			
+			 var burger=document.getElementById('menu-btn');
+			var navbar=document.getElementById('navbar');
+			document.getElementById('menu-btn').onclick=()=>{
+			navbar.classList.toggle('active');
+			burger.classList.toggle('active');
+			}
+			
+			
+			</script>
 
 	</body>
 	</html>
