--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="intro-txt">
                     <p class="para1">MAKE YOUR OWN</p>
                     <span class="span-1">Fashion </span>
-                    <span id="num" class="num"> </span>
+                   <!--  <span id="num" class="num"> </span> -->
                     <p class="para2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati recusandae vitae nostrum atque eum Culpa voluptates.</p>
                 </div>
 
